# PyEPISuite

./: .gitignore  LICENSE  README.md  develop_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  python-package.yml
data/: README.md
data/bcfbaf/: BCF_Ionic_Training_Data.xls  BCF_NonIonic_Regression_DataSet.xls  BCF_Validation_DataSet.xls  km training_testing sets.xls
data/henrywin/: Henry_PhysProp_Data.csv  Henry_PhysProp_Data.xls  data_cleanup.ipynb
data/kowwin/: SrcKowData2.xlsx  kow.csv  kow_zwitterionic.csv  params.csv
data/mpbpvp/: Boiling_Point_PhysChem.csv  Boiling_Pt_TestSet.xls  Melting_Point_PhysChem.csv  Melting_Pt_TestSet.xls  VaporPressure_TestSet.xls  Vapor_Pressure_PhysChem.csv  data_cleanup.ipynb
data/waternt/: WaterFrag_EPA_Report.doc  WaterFragmentDataFiles.xls
data/wskowwin/: WskowwinDatasetDocument.doc  WskowwinValidationDocument.doc  compound_classification.csv  compund_classification.csv  data_cleanup.ipynb  solubility_data.csv  solubility_data_clean.csv
notebooks/: tutorial01.ipynb
src/pyepisuite/: __init__.py  api_client.py  expdata.py  models.py  utils.py
src/pyepisuite/models_expanded/: __init__.py  base.py  degradation.py  environmental_fate.py  partition_coefficients.py  physical_properties.py  responses.py  result.json  result_ecosar.json  transport.py
tests/: __init__.py  test_api_client.py  test_expdata.py  test_utils.py
